made changes required

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,6 @@ html {
     background-color: #FFFFFF;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #1A8EFD;
+    background-color: #008000;
     border-radius: 4rem;
 }
