--- a/src/Styles/Info.css
+++ b/src/Styles/Info.css
@@ -1,15 +1,14 @@
 .info-section {
     padding: 0 32px;
     text-align: center;
-    background-color: white;
-}
-.info-title-content {
-    margin: 64px 0 128px 0;
+    background-color: black;
+    border-bottom: 2px solid #293241;
 }
 .info-title {
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
-    font-weight: bold;    
+    font-weight: bold;
+    color: white; 
 }
 .info-title > span {
     position: relative;
@@ -19,7 +18,7 @@
     position: absolute;
     width: 75%;
     height: 4px;
-    background-color: #9D2553;
+    background-color: #008000;
     border-radius: 8px;
     left: 0;
     bottom: -12px;
@@ -27,7 +26,7 @@
 .info-description {
     margin: 64px;
     text-align: center;
-    color: rgb(77, 75, 75);
+    color: white;
     font-family: 'Rubik', sans-serif;
     font-size: 18px;
     letter-spacing: .8px;
@@ -35,21 +34,21 @@
 }
 /* Cards */
 .info-cards-content {
-    margin: 64px 0;
+    padding: 64px 0;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 32px;
 }
 .info-cards {
     height: auto;
-    border: 2px solid #d7d3d3;
+    border: 2px solid #0c131d;
     border-radius: 12px;
-    background-color: white;
+    background-color: #0c131d;
     position: relative;
 }
 .info-card-title {
     margin: 32px 0 40px 0;
-    color: black;
+    color: red;
     font-family: 'Poppins', sans-serif;
     font-size: 28px;
     font-weight: bold;
@@ -57,7 +56,7 @@
 }
 .info-card-description {
     margin: 24px;
-    color: rgb(77, 75, 75);
+    color: white;
     font-family: 'Rubik', sans-serif;
     font-size: 18px;
     letter-spacing: .8px;
@@ -72,7 +71,7 @@
     border-radius: 30px;
 }
 .info-fa-icon {
-    color: #2C96FF;
+    color: #008000;
     font-size: 24px;
 }
 /* Responsive */
