--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -1,5 +1,5 @@
 .footer-section {
-    background-color: #1B2433;
+    background-color: black;
 }
 .ft-logo {
     width: 20%;
@@ -19,7 +19,7 @@
 }
 /* Title */
 .ft-title {
-    color: #1A8EFD;
+    color: #008000;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
@@ -67,7 +67,7 @@
     border: 2px solid transparent;
     border-radius: 50px;
     outline: transparent;
-    background-color: #1A8EFD;
+    background-color: #008000;
     font-size: 18px;
     font-family: 'Rubik', sans-serif;
     letter-spacing: .8px;
@@ -75,9 +75,9 @@
     transition: all .4s ease;
 }
 .ft-btn:hover {
-    color: #1A8EFD;
+    color: #008000;
     background-color: white;
-    border: 2px solid #1A8EFD;
+    border: 2px solid #008000;
 }
 /* Lists */
 .ft-list-title {
@@ -145,8 +145,8 @@
     fill: #cbcdd3;
 }
 .ft-social-links li a:hover, .ft-social-links li a:hover svg path {
-    fill: #1A8EFD;
-    border: 2px solid #1A8EFD;
+    fill: #008000;
+    border: 2px solid #008000;
 }
 /* Responsive */
 @media screen and (max-width: 700px) {
