--- a/src/Styles/LegalDocs.css
+++ b/src/Styles/LegalDocs.css
@@ -5,7 +5,7 @@
 /* Title */
 .legal-siteTitle a {
     text-decoration: none;
-    color: #1A8EFD;
+    color: #008000;
     font-size: 48px;
     letter-spacing: .8px;
 }
