--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -4,10 +4,10 @@
     justify-content: space-between;
     align-items: center;
     height: 80px;
-    background-color: white;
+    background-color: black;
 }
 .navbar-title a {
-    color: #1A8EFD;
+    color: #008000;
     letter-spacing: .6px;
     text-decoration: none;
 }
@@ -33,12 +33,12 @@
 }
 .navbar-links {
     text-decoration: none;
-    color: black;
+    color: white;
     font-size: 18px;
     letter-spacing: .8px;
 }
 .navbar-links:hover {
-    color: #0cc2ea;
+    color: #008000;
 }
 .navbar-btn {
     padding: 14px 20px;
@@ -46,7 +46,7 @@
     border: 1px solid transparent;
     border-radius: 28px;
     outline: transparent;
-    background-color: #1A8EFD;
+    background-color: #008000;
     font-size: 18px;
     font-family: 'Rubik', sans-serif;
     letter-spacing: .8px;
@@ -54,9 +54,9 @@
     transition: all .4s ease;
 }
 .navbar-btn:hover {
-    color: #1A8EFD;
+    color: #008000;
     background-color: white;
-    border: 1px solid #1A8EFD;
+    border: 1px solid #008000;
 }
 /* Hamburger Icon */
 .mobile-nav {
@@ -106,14 +106,14 @@
 }
 .mobile-navbar-links li a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     letter-spacing: .8px;
     transition: color .3s ease-in-out;
 }
 .mobile-navbar-links li a:hover {
-    color: #0cc2ea;
+    color: #008000;
 }
 /* Responsive */
 @media screen and (max-width: 900px) {
