--- a/src/Styles/Reviews.css
+++ b/src/Styles/Reviews.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     gap: 24px;
-    background: linear-gradient(to right, #ECF2FF, #FBFCFF);
+    background: black;
+    border-bottom: 2px solid #293241;
 }
 /* Text */
 .rw-text-content {
@@ -18,18 +19,18 @@
 }
 .rw-text-title {
     margin: 16px 0;
-    color: #6F7074;
+    color: white;
     font-family: 'Rubik', sans-serif;
     font-size: 32px;
     font-weight: bold;
     letter-spacing: .7px;
 }
 .rw-text-num {
-    color: #178BFF;
+    color: #008000;
 }
 .rw-text-desc {
     margin: 16px 0;
-    color: black;
+    color: white;
     font-family: 'Rubik', sans-serif;
     font-size: 36px;
     font-weight: bold;
@@ -47,7 +48,7 @@
     position: absolute;
     top: -18px;
     left: -24px;
-    color: #178BFF;
+    color: #008000;
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
     font-weight: bold;
@@ -57,7 +58,7 @@
     position: absolute;
     right: -18px;
     bottom: -24px;
-    color: #178BFF;
+    color: #008000;
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
     font-weight: bold;
@@ -66,7 +67,7 @@
 .rw-review {
     display: block;
     margin: 0 0 0 8px;
-    color: black;
+    color: white;
     font-family: 'Rubik', sans-serif;
     font-size: 24px;
     letter-spacing: .7px;
@@ -96,7 +97,7 @@
 /* Buttons */
 .rw-next-btn {
     margin: 0 24px 0 0;
-    color: black;
+    color: white;
     border: 1px solid transparent;
     background-color: transparent;
     outline: transparent;
@@ -104,7 +105,7 @@
     cursor: pointer;
 }
 .rw-next-btn:hover {
-    color: #178BFF;
+    color: #008000;
 }
 /* Responsive */
 @media screen and (max-width: 700px) {
