--- a/src/Styles/Hero.css
+++ b/src/Styles/Hero.css
@@ -2,6 +2,7 @@
     padding: 0;
     position: relative;
     overflow: hidden;
+    background-color: black;
     border-bottom: 1px solid #293241;
   }
   
